--- a/docs/sudoers.ldap.mdoc.in
+++ b/docs/sudoers.ldap.mdoc.in
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd June 7, 2023
+.Dd June 25, 2024
 .Dt SUDOERS.LDAP @mansectform@
 .Os Sudo @PACKAGE_VERSION@
 .Sh NAME
@@ -616,17 +616,20 @@ distribution includes versions of the
 .Nm sudoers
 schema for multiple LDAP servers:
 .Bl -tag -width 4n
+.It Pa schema.ActiveDirectory
+Microsoft Active Directory
+.It Pa schema.IBM_LDAP
+IBM Directory Server, also known as IBM Tivoli Directory Server,
+IBM Security Directory Server, and IBM Security Verify Directory
+.It Pa schema.iPlanet
+Netscape-derived servers such as the iPlanet, Oracle,
+and 389 Directory Servers
+.It Pa schema.olcSudo
+OpenLDAP slapd 2.3 and higher when on-line configuration is enabled
 .It Pa schema.OpenLDAP
 OpenLDAP slapd and
 .Ox
 ldapd
-.It Pa schema.olcSudo
-OpenLDAP slapd 2.3 and higher when on-line configuration is enabled
-.It Pa schema.iPlanet
-Netscape-derived servers such as the iPlanet, Oracle,
-and 389 Directory Servers
-.It Pa schema.ActiveDirectory
-Microsoft Active Directory
 .El
 .Pp
 The schema in OpenLDAP format is also included in the
