Fix formatting of ttydev on systems with signed 32-bit dev_t
If dev_t is 32-bit and signed, formatting as an unsigned long long
may result in a bogus value due to sign extension.

--- a/config.h.in
+++ b/config.h.in
@@ -1293,6 +1293,9 @@
 /* Define to 1 if you want sudo to set $HOME in shell mode. */
 #undef SHELL_SETS_HOME
 
+/* The size of 'dev_t', as computed by sizeof. */
+#undef SIZEOF_DEV_T
+
 /* The size of 'id_t', as computed by sizeof. */
 #undef SIZEOF_ID_T
 
