--- a/configure.ac
+++ b/configure.ac
@@ -2507,6 +2507,7 @@ SUDO_SOCK_SA_LEN
 SUDO_SOCK_SIN_LEN
 AC_CHECK_SIZEOF([long])
 AC_CHECK_SIZEOF([long long])
+AC_CHECK_SIZEOF([dev_t])
 AC_CHECK_SIZEOF([id_t])
 AC_CHECK_SIZEOF([time_t])
 AC_CHECK_SIZEOF([uid_t])
