--- a/configure.ac
+++ b/configure.ac
@@ -3060,14 +3060,15 @@ AS_IF([test X"$sudo_mktemp" = X"yes"], [
     SUDO_APPEND_COMPAT_EXP(sudo_mkdtemp sudo_mkdtempat sudo_mkostempsat sudo_mkstemp sudo_mkstemps)
     COMPAT_TEST_PROGS="${COMPAT_TEST_PROGS}${COMPAT_TEST_PROGS+ }mktemp_test"
 ])
-AX_FUNC_SNPRINTF
-AS_IF([test X"$ac_cv_prog_cc_c99" != X"no"], [
+AS_IF([test X"$ac_cv_prog_cc_c99" != X"no" -a X"$cross_compiling" = X"yes"], [
     # If we have a C99 compiler and are cross-compiling, assume
     # C99-compliant v?snprintf().
-    AS_IF([test X"$ac_cv_have_working_snprintf$ac_cv_have_working_vsnprintf" = X"crosscross"], [
-	ac_cv_have_working_snprintf=yes
-	ac_cv_have_working_vsnprintf=yes
-    ])
+    AC_CHECK_FUNCS(snprintf vsnprintf)
+    ac_cv_have_working_snprintf="$ac_cv_func_snprintf"
+    ac_cv_have_working_vsnprintf="$ac_cv_func_vsnprintf"
+], [
+    # Check for C99-compliant v?snprintf().
+    AX_FUNC_SNPRINTF
 ])
 AS_IF([test X"$ac_cv_have_working_snprintf$ac_cv_have_working_vsnprintf" = X"yesyes"], [
     # System has a C99-compliant v?snprintf(), check for v?asprintf()
