--- a/docs/sudo.man.in
+++ b/docs/sudo.man.in
@@ -2,7 +2,7 @@
 .\"
 .\" SPDX-License-Identifier: ISC
 .\"
-.\" Copyright (c) 1994-1996, 1998-2005, 2007-2023
+.\" Copyright (c) 1994-1996, 1998-2005, 2007-2024
 .\"	Todd C. Miller <Todd.Miller@sudo.ws>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -25,7 +25,7 @@
 .nr BA @BAMAN@
 .nr LC @LCMAN@
 .nr PS @PSMAN@
-.TH "SUDO" "@mansectsu@" "August 9, 2023" "Sudo @PACKAGE_VERSION@" "System Manager's Manual"
+.TH "SUDO" "@mansectsu@" "December 20, 2024" "Sudo @PACKAGE_VERSION@" "System Manager's Manual"
 .nh
 .if n .ad l
 .SH "NAME"
@@ -1594,14 +1594,23 @@ option is specified) and the standard input has been redirected from
 \fBsudo\fR
 needs to read the password but there is no mechanism available for it
 to do so.
-A terminal is not present to read the password from,
+Remote commands run via
+ssh(1)
+do not have a terminal available by default; passing the
+\fB\-t\fR
+option to
+ssh(1)
+will cause it to allocate a terminal which should allow
 \fBsudo\fR
-has not been configured to read from the standard input,
-the
+to read the password.
+To allow
+\fBsudo\fR
+to run local commands without a terminal, the
 \fB\-S\fR
-option was not used, and no askpass helper has been specified either via the
+option can be used to read a password from the standard input, or
+an askpass helper can be configured via either the
 sudo.conf(@mansectform@)
-file or the
+file or by setting the
 \fRSUDO_ASKPASS\fR
 environment variable.
 .TP 6n
