--- a/docs/sudo.mdoc.in
+++ b/docs/sudo.mdoc.in
@@ -1,7 +1,7 @@
 .\"
 .\" SPDX-License-Identifier: ISC
 .\"
-.\" Copyright (c) 1994-1996, 1998-2005, 2007-2023
+.\" Copyright (c) 1994-1996, 1998-2005, 2007-2024
 .\"	Todd C. Miller <Todd.Miller@sudo.ws>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -24,7 +24,7 @@
 .nr BA @BAMAN@
 .nr LC @LCMAN@
 .nr PS @PSMAN@
-.Dd August 9, 2023
+.Dd December 20, 2024
 .Dt SUDO @mansectsu@
 .Os Sudo @PACKAGE_VERSION@
 .Sh NAME
@@ -1492,14 +1492,23 @@ option is specified) and the standard input has been redirected from
 .Nm
 needs to read the password but there is no mechanism available for it
 to do so.
-A terminal is not present to read the password from,
+Remote commands run via
+.Xr ssh 1
+do not have a terminal available by default; passing the
+.Fl t
+option to
+.Xr ssh 1
+will cause it to allocate a terminal which should allow
 .Nm
-has not been configured to read from the standard input,
-the
+to read the password.
+To allow
+.Nm
+to run local commands without a terminal, the
 .Fl S
-option was not used, and no askpass helper has been specified either via the
+option can be used to read a password from the standard input, or
+an askpass helper can be configured via either the
 .Xr sudo.conf @mansectform@
-file or the
+file or by setting the
 .Ev SUDO_ASKPASS
 environment variable.
 .It Li no writable temporary directory found
