Format T_TIMESPEC as "%d.%d" instead of "%.1f"
This fixes the display of the timeout values in the "sudo -V" output
on systems without a C99-compliant snprintf().  The snprintf()
replacement sudo ships with does not support floating point.

--- a/plugins/sudoers/def_data.in
+++ b/plugins/sudoers/def_data.in
@@ -115,10 +115,10 @@ loglinelen
 	"Length at which to wrap log file lines (0 for no wrap): %u"
 timestamp_timeout
 	T_TIMESPEC|T_BOOL
-	"Authentication timestamp timeout: %.1f minutes"
+	"Authentication timestamp timeout: %d.%d minutes"
 passwd_timeout
 	T_TIMESPEC|T_BOOL
-	"Password prompt timeout: %.1f minutes"
+	"Password prompt timeout: %d.%d minutes"
 passwd_tries
 	T_UINT
 	"Number of tries to enter a password: %u"
