--- a/plugins/sudoers/Makefile.in
+++ b/plugins/sudoers/Makefile.in
@@ -1350,26 +1350,26 @@ cvtsudoers_csv.plog: cvtsudoers_csv.i
 cvtsudoers_json.o: $(srcdir)/cvtsudoers_json.c $(devdir)/def_data.h \
                    $(devdir)/gram.h $(incdir)/compat/stdbool.h \
                    $(incdir)/sudo_compat.h $(incdir)/sudo_conf.h \
-                   $(incdir)/sudo_debug.h $(incdir)/sudo_eventlog.h \
-                   $(incdir)/sudo_fatal.h $(incdir)/sudo_gettext.h \
-                   $(incdir)/sudo_json.h $(incdir)/sudo_plugin.h \
-                   $(incdir)/sudo_queue.h $(incdir)/sudo_util.h \
-                   $(srcdir)/cvtsudoers.h $(srcdir)/defaults.h \
-                   $(srcdir)/logging.h $(srcdir)/parse.h $(srcdir)/pivot.h \
-                   $(srcdir)/strlist.h $(srcdir)/sudo_nss.h \
+                   $(incdir)/sudo_debug.h $(incdir)/sudo_digest.h \
+                   $(incdir)/sudo_eventlog.h $(incdir)/sudo_fatal.h \
+                   $(incdir)/sudo_gettext.h $(incdir)/sudo_json.h \
+                   $(incdir)/sudo_plugin.h $(incdir)/sudo_queue.h \
+                   $(incdir)/sudo_util.h $(srcdir)/cvtsudoers.h \
+                   $(srcdir)/defaults.h $(srcdir)/logging.h $(srcdir)/parse.h \
+                   $(srcdir)/pivot.h $(srcdir)/strlist.h $(srcdir)/sudo_nss.h \
                    $(srcdir)/sudoers.h $(srcdir)/sudoers_debug.h \
                    $(top_builddir)/config.h $(top_builddir)/pathnames.h
 	$(CC) -c $(CPPFLAGS) $(CFLAGS) $(ASAN_CFLAGS) $(PIE_CFLAGS) $(HARDENING_CFLAGS) $(srcdir)/cvtsudoers_json.c
 cvtsudoers_json.i: $(srcdir)/cvtsudoers_json.c $(devdir)/def_data.h \
                    $(devdir)/gram.h $(incdir)/compat/stdbool.h \
                    $(incdir)/sudo_compat.h $(incdir)/sudo_conf.h \
-                   $(incdir)/sudo_debug.h $(incdir)/sudo_eventlog.h \
-                   $(incdir)/sudo_fatal.h $(incdir)/sudo_gettext.h \
-                   $(incdir)/sudo_json.h $(incdir)/sudo_plugin.h \
-                   $(incdir)/sudo_queue.h $(incdir)/sudo_util.h \
-                   $(srcdir)/cvtsudoers.h $(srcdir)/defaults.h \
-                   $(srcdir)/logging.h $(srcdir)/parse.h $(srcdir)/pivot.h \
-                   $(srcdir)/strlist.h $(srcdir)/sudo_nss.h \
+                   $(incdir)/sudo_debug.h $(incdir)/sudo_digest.h \
+                   $(incdir)/sudo_eventlog.h $(incdir)/sudo_fatal.h \
+                   $(incdir)/sudo_gettext.h $(incdir)/sudo_json.h \
+                   $(incdir)/sudo_plugin.h $(incdir)/sudo_queue.h \
+                   $(incdir)/sudo_util.h $(srcdir)/cvtsudoers.h \
+                   $(srcdir)/defaults.h $(srcdir)/logging.h $(srcdir)/parse.h \
+                   $(srcdir)/pivot.h $(srcdir)/strlist.h $(srcdir)/sudo_nss.h \
                    $(srcdir)/sudoers.h $(srcdir)/sudoers_debug.h \
                    $(top_builddir)/config.h $(top_builddir)/pathnames.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/cvtsudoers_json.c > $@
