--- a/docs/visudo.mdoc.in
+++ b/docs/visudo.mdoc.in
@@ -398,17 +398,17 @@ syntax errors,
 .Nm
 may produce the following messages:
 .Bl -tag -width 4n
-.It Li sudoers file busy, try again later.
+.It sudoers file busy, try again later.
 Someone else is currently editing the
 .Em sudoers
 file.
-.It Li @sysconfdir@/sudoers: Permission denied
+.It @sysconfdir@/sudoers: Permission denied
 You didn't run
 .Nm
 as root.
-.It Li you do not exist in the passwd database
+.It you do not exist in the passwd database
 Your user-ID does not appear in the system passwd database.
-.It Li Warning: {User,Runas,Host,Cmnd}_Alias referenced but not defined
+.It Warning: {User,Runas,Host,Cmnd}_Alias referenced but not defined
 Either you are trying to use an undeclared {User,Runas,Host,Cmnd}_Alias
 or you have a user or host name listed that consists solely of
 uppercase letters, digits, and the underscore
@@ -425,14 +425,14 @@ file and the line number where the undefined alias was used.
 In
 .Fl s
 (strict) mode these are errors, not warnings.
-.It Li Warning: unused {User,Runas,Host,Cmnd}_Alias
+.It Warning: unused {User,Runas,Host,Cmnd}_Alias
 The specified {User,Runas,Host,Cmnd}_Alias was defined but never
 used.
 The message is prefixed with the path name of the
 .Em sudoers
 file and the line number where the unused alias was defined.
 You may wish to comment out or remove the unused alias.
-.It Li Warning: cycle in {User,Runas,Host,Cmnd}_Alias
+.It Warning: cycle in {User,Runas,Host,Cmnd}_Alias
 The specified {User,Runas,Host,Cmnd}_Alias includes a reference to
 itself, either directly or through an alias it includes.
 The message is prefixed with the path name of the
@@ -448,7 +448,7 @@ will ignore cycles when parsing
 the
 .Em sudoers
 file.
-.It Li ignoring editor backup file
+.It ignoring editor backup file
 While processing a
 .Em @includedir
 or
@@ -461,7 +461,7 @@ Such files are skipped by
 .Nm sudo
 and
 .Nm .
-.It Li ignoring file name containing '.'
+.It ignoring file name containing '.'
 While processing a
 .Em @includedir
 or
@@ -473,7 +473,7 @@ Such files are skipped by
 .Nm sudo
 and
 .Nm .
-.It Li unknown defaults entry \&"name\&"
+.It unknown defaults entry \&"name\&"
 The
 .Em sudoers
 file contains a
