--- a/docs/sudo.man.in
+++ b/docs/sudo.man.in
@@ -1521,8 +1521,9 @@ $ sudo sh -c "cd /home ; du -s * | sort -rn > USAGE"
 Error messages produced by
 \fBsudo\fR
 include:
-.TP 6n
-\fRediting files in a writable directory is not permitted\fR
+.PP
+editing files in a writable directory is not permitted
+.RS 4n
 By default,
 \fBsudoedit\fR
 does not permit editing a file when any of the parent directories are writable
@@ -1534,8 +1535,10 @@ See the
 option in
 sudoers(@mansectform@)
 for more information.
-.TP 6n
-\fRediting symbolic links is not permitted\fR
+.RE
+.PP
+editing symbolic links is not permitted
+.RS 4n
 By default,
 \fBsudoedit\fR
 does not follow symbolic links when opening files.
@@ -1544,8 +1547,10 @@ See the
 option in
 sudoers(@mansectform@)
 for more information.
-.TP 6n
-\fReffective uid is not 0, is sudo installed setuid root?\fR
+.RE
+.PP
+effective uid is not 0, is sudo installed setuid root?
+.RS 4n
 \fBsudo\fR
 was not run with root privileges.
 The
@@ -1554,8 +1559,11 @@ binary must be owned by the root user and have the set-user-ID bit set.
 Also, it must not be located on a file system mounted with the
 \(oqnosuid\(cq
 option or on an NFS file system that maps uid 0 to an unprivileged uid.
-.TP 6n
-\fReffective uid is not 0, is sudo on a file system with the 'nosuid' option set or an NFS file system without root privileges?\fR
+.RE
+.PP
+effective uid is not 0, is sudo on a file system with the 'nosuid'
+option set or an NFS file system without root privileges?
+.RS 4n
 \fBsudo\fR
 was not run with root privileges.
 The
@@ -1567,12 +1575,16 @@ The most common reason for this is that the file system the
 binary is located on is mounted with the
 \(oqnosuid\(cq
 option or it is an NFS file system that maps uid 0 to an unprivileged uid.
-.TP 6n
-\fRfatal error, unable to load plugins\fR
+.RE
+.PP
+fatal error, unable to load plugins
+.RS 4n
 An error occurred while loading or initializing the plugins specified in
 sudo.conf(@mansectform@).
-.TP 6n
-\fRinvalid environment variable name\fR
+.RE
+.PP
+invalid environment variable name
+.RS 4n
 One or more environment variable names specified via the
 \fB\-E\fR
 option contained an equal sign
@@ -1580,8 +1592,10 @@ option contained an equal sign
 The arguments to the
 \fB\-E\fR
 option should be environment variable names without an associated value.
-.TP 6n
-\fRno password was provided\fR
+.RE
+.PP
+no password was provided
+.RS 4n
 When
 \fBsudo\fR
 tried to read the password, it did not receive any characters.
@@ -1589,8 +1603,10 @@ This may happen if no terminal is available (or the
 \fB\-S\fR
 option is specified) and the standard input has been redirected from
 \fI/dev/null\fR.
-.TP 6n
-\fRa terminal is required to read the password\fR
+.RE
+.PP
+a terminal is required to read the password
+.RS 4n
 \fBsudo\fR
 needs to read the password but there is no mechanism available for it
 to do so.
@@ -1613,13 +1629,19 @@ sudo.conf(@mansectform@)
 file or by setting the
 \fRSUDO_ASKPASS\fR
 environment variable.
-.TP 6n
-\fRno writable temporary directory found\fR
+.RE
+.PP
+no writable temporary directory found
+.RS 4n
 \fBsudoedit\fR
 was unable to find a usable temporary directory in which to store its
 intermediate files.
-.TP 6n
-\fRThe\fR \(lqno new privileges\(rq flag is set, which prevents sudo from running as root.
+.RE
+.PP
+The
+\(lqno new privileges\(rq
+flag is set, which prevents sudo from running as root.
+.RS 4n
 \fBsudo\fR
 was run by a process that has the Linux
 \(lqno new privileges\(rq
@@ -1633,31 +1655,42 @@ The most likely cause for this is running
 within a container that sets this flag.
 Check the documentation to see if it is possible to configure the
 container such that the flag is not set.
-.TP 6n
-\fRsudo must be owned by uid 0 and have the setuid bit set\fR
+.RE
+.PP
+sudo must be owned by uid 0 and have the setuid bit set
+.RS 4n
 \fBsudo\fR
 was not run with root privileges.
 The
 \fBsudo\fR
 binary does not have the correct owner or permissions.
 It must be owned by the root user and have the set-user-ID bit set.
-.TP 6n
-\fRsudoedit is not supported on this platform\fR
+.RE
+.PP
+sudoedit is not supported on this platform
+.RS 4n
 It is only possible to run
 \fBsudoedit\fR
 on systems that support setting the effective user-ID.
-.TP 6n
-\fRtimed out reading password\fR
+.RE
+.PP
+timed out reading password
+.RS 4n
 The user did not enter a password before the password timeout
 (5 minutes by default) expired.
-.TP 6n
-\fRyou do not exist in the passwd database\fR
+.RE
+.PP
+you do not exist in the passwd database
+.RS 4n
 Your user-ID does not appear in the system passwd database.
-.TP 6n
-\fRyou may not specify environment variables in edit mode\fR
+.RE
+.PP
+you may not specify environment variables in edit mode
+.RS 4n
 It is only possible to specify environment variables when running a
 \fIcommand\fR.
 When editing a file, the editor is run with the user's environment unmodified.
+.RE
 .SH "SEE ALSO"
 su(1),
 stat(2),
