--- a/docs/visudo.man.in
+++ b/docs/visudo.man.in
@@ -413,21 +413,21 @@ In addition to reporting
 syntax errors,
 \fBvisudo\fR
 may produce the following messages:
-.TP 6n
-\fRsudoers file busy, try again later.\fR
+.TP 4n
+sudoers file busy, try again later.
 Someone else is currently editing the
 \fIsudoers\fR
 file.
-.TP 6n
-\fR@sysconfdir@/sudoers: Permission denied\fR
+.TP 4n
+@sysconfdir@/sudoers: Permission denied
 You didn't run
 \fBvisudo\fR
 as root.
-.TP 6n
-\fRyou do not exist in the passwd database\fR
+.TP 4n
+you do not exist in the passwd database
 Your user-ID does not appear in the system passwd database.
-.TP 6n
-\fRWarning: {User,Runas,Host,Cmnd}_Alias referenced but not defined\fR
+.TP 4n
+Warning: {User,Runas,Host,Cmnd}_Alias referenced but not defined
 Either you are trying to use an undeclared {User,Runas,Host,Cmnd}_Alias
 or you have a user or host name listed that consists solely of
 uppercase letters, digits, and the underscore
@@ -443,16 +443,16 @@ file and the line number where the undefined alias was used.
 In
 \fB\-s\fR
 (strict) mode these are errors, not warnings.
-.TP 6n
-\fRWarning: unused {User,Runas,Host,Cmnd}_Alias\fR
+.TP 4n
+Warning: unused {User,Runas,Host,Cmnd}_Alias
 The specified {User,Runas,Host,Cmnd}_Alias was defined but never
 used.
 The message is prefixed with the path name of the
 \fIsudoers\fR
 file and the line number where the unused alias was defined.
 You may wish to comment out or remove the unused alias.
-.TP 6n
-\fRWarning: cycle in {User,Runas,Host,Cmnd}_Alias\fR
+.TP 4n
+Warning: cycle in {User,Runas,Host,Cmnd}_Alias
 The specified {User,Runas,Host,Cmnd}_Alias includes a reference to
 itself, either directly or through an alias it includes.
 The message is prefixed with the path name of the
@@ -468,8 +468,8 @@ will ignore cycles when parsing
 the
 \fIsudoers\fR
 file.
-.TP 6n
-\fRignoring editor backup file\fR
+.TP 4n
+ignoring editor backup file
 While processing a
 \fI@includedir\fR
 or
@@ -482,8 +482,8 @@ Such files are skipped by
 \fBsudo\fR
 and
 \fBvisudo\fR.
-.TP 6n
-\fRignoring file name containing '.'\fR
+.TP 4n
+ignoring file name containing '.'
 While processing a
 \fI@includedir\fR
 or
@@ -495,8 +495,8 @@ Such files are skipped by
 \fBsudo\fR
 and
 \fBvisudo\fR.
-.TP 6n
-\fRunknown defaults entry \&"name\&"\fR
+.TP 4n
+unknown defaults entry \&"name\&"
 The
 \fIsudoers\fR
 file contains a
