--- a/docs/Makefile.in
+++ b/docs/Makefile.in
@@ -36,6 +36,7 @@ MANDOC = mandoc
 MANCOMPRESS = @MANCOMPRESS@
 MANCOMPRESSEXT = @MANCOMPRESSEXT@
 TR = @TRPROG@
+GROFF = @GROFFPROG@
 
 # Our install program supports extra flags...
 INSTALL = $(SHELL) $(scriptdir)/install-sh -c
@@ -126,6 +127,10 @@ lint: all
 	    for m in $(DOCS); do \
 		echo $(MANDOC) -Tlint -Wwarning $$m; \
 		$(MANDOC) -Tlint -Wwarning $$m || rval=`expr $$rval + $$?`; \
+		if [ -n "$(GROFF)" ]; then \
+		    echo $(GROFF) -mandoc -K utf8 -rF0 -rHY=0 -ww -b -z $$m; \
+		    $(GROFF) -mandoc -K utf8 -rF0 -rHY=0 -ww -b -z $$m || rval=`expr $$rval + $$?`; \
+		fi; \
 	    done; \
 	    exit $$rval; \
 	fi
